# rustyms-imgt

./: .gitignore  Cargo.toml  readme.md
generate/: Cargo.toml
generate/src/: main.rs
germlines/: germlines.md  germlines.rs
shared/: regions.rs  species.rs
