[package]
name = "generate"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Douwe Schulte <d.schulte@uu.nl>"]
rust-version = "1.70.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustyms = { git = "https://github.com/snijderlab/rustyms", branch = "main" }
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }
itertools = "0.12"
flate2 = "1"
